<resources>
    <!--limpid-->
    <string name="app_name">清水歌词</string>
    <string name="app_url">https://github.com/wuyuanqing527/LrcReader</string>
    <string name="search">搜索</string>
    <string name="textSize">字体大小</string>
    <string name="share">分享</string>
    <string name="local_search_list_text">本地歌词文件夹列表:</string>
    <string name="local_search_progress_text_ing">正在搜索本地歌词…</string>
    <string name="local_search_progress_text_ed">本地歌词搜索完成</string>
    <string name="local_expand_progress_text_ing">正在加载本地歌词…</string>
    <string name="local_expand_progress_text_ed">本地歌词加载完成</string>
    <string name="local_search_expand_text">本地歌词列表</string>
    <string name="like">喜欢</string>
    <string name="local">本地</string>
    <string name="search_input_text_hint_song_name">歌名</string>
    <string name="search_history">历史记录</string>
    <string name="album_cover">album_cover</string>
    <string name="search_input_text_hint_artist">歌手</string>
    <string name="click_to_retry">点击重试</string>
    <string name="back">返回</string>
    <string name="loading">加载中…</string>
    <string name="like_little">有点喜欢</string>
    <string name="like_most">很喜欢</string>
    <string name="local_list">列表</string>
    <string name="local_folder">文件夹</string>
    <string name="local_refresh">刷新</string>
    <string name="setting">设置</string>
    <string name="apk_version">版本号：</string>
    <string name="about">关于</string>
    <string name="source_url">源码地址:</string>
    <string name="search_history_max_number">搜索历史最大缓存条数：</string>
    <string name="set_cache_limit">设置缓存上限</string>
    <string name="param_invalid">参数非法</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
</resources>
