<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal_big"
        android:src="@drawable/songlist_72px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_normal_small"
            android:paddingBottom="@dimen/margin_normal_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/search_history_max_number"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/setting_activity_search_history_max_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="100条"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_normal_small"
            android:paddingBottom="@dimen/margin_normal_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/set_cache_limit"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/setting_activity_cache_limit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="20M"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal_big"
            android:text="@string/about"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/text_size_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_normal_small"
            android:paddingBottom="@dimen/margin_normal_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/apk_version"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/setting_activity_apk_version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_normal_small"
            android:paddingBottom="@dimen/margin_normal_small">

            <TextView
                android:id="@+id/setting_activity_github_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/source_url"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/setting_activity_github_url_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_activity_github_url"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_url"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_normal" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />
    </LinearLayout>
</LinearLayout>
